fixing bullet css on mobile

--- a/app/assets/stylesheets/profile-edit.css
+++ b/app/assets/stylesheets/profile-edit.css
@@ -93,6 +93,7 @@
 
 .bullet{
     max-width: 2rem!important;
+    width: 2rem!important;
     max-height: 3rem;
     /* margin-bottom: -1px!important;
     margin-top: -2px!important; */
